bugfix: Console columns too wide

--- a/src/web/widgets/Console/index.styl
+++ b/src/web/widgets/Console/index.styl
@@ -20,5 +20,5 @@
 
 .terminal-container {
     background: #000;
-    height: 240px;
+    height: 260px;
 }
